objects/Contact.object
<CustomObject>
    <fields>
        <fullName>ConvertedFromLead__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ConvertedFromLead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Languages__c</fullName>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Secondary</fullName>
                </value>
                <value>
                    <fullName>Tertiary</fullName>
                </value>
                <value>
                    <fullName>Primary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Contact_Validation</fullName>
        <active>false</active>
        <errorConditionFormula>AND(AND(NOT(ISNULL(Phone)),NOT(REGEX(Phone,&quot;[+91]{3}[6-9]{1}[0-9]{9}&quot;))),
 AND(NOT(ISNULL(Phone)),NOT(REGEX(Phone,&quot;[+1]{2}[1-9]{1}[0-9]{9}&quot;))),
 AND(NOT(ISNULL(Phone)),NOT(REGEX(Phone,&quot;[+44]{3}[1-9]{1}[0-9]{9}&quot;))),
 AND(NOT(ISNULL(Phone)),NOT(REGEX(Phone,&quot;[+35]{3}[1-9]{1}[0-9]{9}&quot;))))</errorConditionFormula>
        <errorMessage>Please Enter the Contact in correct format</errorMessage>
    </validationRules>
</CustomObject>